# SparseMatrixDensity

./: .gitignore  README.md
GCNModel/: dataset.py  evaluate.ipynb  gcn_model.py
MatrixGenerator/: CMakeLists.txt
MatrixGenerator/python/: matrix_generator.py  matrix_generator_extreme_cases.py  matrix_generator_inner_outer_products.py  matrix_generator_vector_like_products.py  matrix_generator_vector_products.py  matrix_generator_wider_range.py  matrix_generator_wider_range_parallel.py
MatrixGenerator/src/: EntryGenerator.cpp  EntryGenerator.h  MatrixGenerator.cpp  MatrixGenerator.h  MatrixGeneratorModule.cpp  Utilities.cpp  Utilities.h
